# acl19-heuristic-authorship-obfuscation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/: .gitignore  analyze_output_logs.sh  generate_dictionaries.py  hypernym-dictionary.tsv  jsd_obfuscation_level_base.py  obfuscate_corpus.sh
assets/brown/: cb08
cmake/: Netspeak3Config.cmake
doc/: performance.txt
obfuscation/: ComputeCostH.cpp  ComputeCostH.hpp  Context.cpp  Context.hpp  GoalCheck.hpp  Obfuscator.cpp  Obfuscator.hpp  State.cpp  State.hpp
obfuscation/operators/: AbstractWordOperator.cpp  AbstractWordOperator.hpp  CharMapOperator.cpp  CharMapOperator.hpp  CharacterFlipOperator.cpp  CharacterFlipOperator.hpp  ContextlessHypernymOperator.cpp  ContextlessHypernymOperator.hpp  ContextlessSynonymOperator.cpp  ContextlessSynonymOperator.hpp  NetspeakOperator.cpp  NetspeakOperator.hpp  NgramRemovalOperator.cpp  NgramRemovalOperator.hpp  ObfuscationOperator.cpp  ObfuscationOperator.hpp  WordRemovalOperator.cpp  WordRemovalOperator.hpp  WordReplacementOperator.cpp  WordReplacementOperator.hpp
obfuscation/util/: DiffString.cpp  DiffString.hpp  LayeredOStream.cpp  LayeredOStream.hpp  NgramProfile.cpp  NgramProfile.hpp  dekker.hpp  generate_profile.cpp  generate_profile.hpp  logprob.hpp  netspeak.cpp  netspeak.hpp
search-generic/: CMakeLists.txt
search-generic/search/generic/: AstarSearch.hpp  ClosedList.hpp  Node.hpp  OpenList.hpp  Operator.hpp  Status.hpp  debug.hpp
